# sigstore-rs

./: Cargo.toml
examples/conformance/: main.rs
examples/cosign/verify/: main.rs
src/: errors.rs  lib.rs  sign.rs
src/bundle/: mod.rs
src/cosign/: client_builder.rs  mod.rs  signature_layers.rs
src/cosign/constraint/: signature.rs
src/cosign/verification_constraint/: certificate_verifier.rs
src/crypto/: certificate_pool.rs  keyring.rs  mod.rs  transparency.rs  verification_key.rs
src/crypto/signing_key/: ed25519.rs  mod.rs
src/crypto/signing_key/ecdsa/: ec.rs
src/crypto/signing_key/rsa/: keypair.rs
src/fulcio/: mod.rs  models.rs
src/trust/sigstore/: constants.rs  mod.rs
src/tuf/: constants.rs  mod.rs  trustroot.rs
src/verify/: mod.rs  models.rs  policy.rs  verifier.rs
tests/conformance/: Cargo.toml  conformance.rs
