[package]
name = "sigstore-conformance"
description = "sigstore conformance testing workflow"
version = "0.0.1"
edition = "2021"
authors = ["sigstore-rs developers"]
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.0.8", features = ["derive"] }
sigstore = { path = "../../" }
tokio = { version = "1.17.0", features = ["rt"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[[bin]]
name = "sigstore"
path = "conformance.rs"